# fancy_job

./: README.md  pyproject.toml  update_number.py
.github/workflows/: CI-CD.yml
