[project]
name = "fancy-job"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "transformers==5.12.0",
    "huggingface-hub==1.20.1",
]
[project.optional-dependencies]
llm = [
    "torch>=2.11.0",
    "transformers>=4.47.1"
]
