[project]
name = "fancy-job"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "transformers==5.13.1",
    "huggingface-hub==1.24.0",
    "anyio==4.14.2",
]
[project.optional-dependencies]
llm = [
    "torch>=2.11.0",
    "transformers>=4.47.1"
]
