[project]
name = "fancy-job"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "transformers==5.14.1",
    "huggingface-hub==1.23.0",
    "anyio==4.14.2",
]
[project.optional-dependencies]
llm = [
    "torch>=2.13.0",
    "transformers>=4.47.1"
]
